--- a/crm/website/templates/home.html
+++ b/crm/website/templates/home.html
@@ -1,18 +1,8 @@
 {% extends 'base.html' %}
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Asiste | home</title>
-</head>
-<body>
-  
-</body>
-</html> -->
-
+{% load static %}
 {% block content %}
+
+    <link rel="stylesheet" href="../../static/css/style.css">
 
     {% if user.is_authenticated %}
 
