Implementacion de formularios de validacion funcionales

--- a/asiste/website/templates/landing_page.html
+++ b/asiste/website/templates/landing_page.html
@@ -1,13 +1,16 @@
+{% load static %}
 <!doctype html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport"content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Asiste | landing</title>
+    <link rel="stylesheet" href="../../static/css/styles.css">
+    <link rel="shortcut icon" href="../../static/img/_icono_asiste.png" type="image/x-icon">
 </head>
 <body>
-    <h1>Hola asiste website</h1>
+    <h1>Landing page ASISTE</h1>
+    <a href="{% url 'home' %}">Iniciar sesion</a>
 </body>
 </html>
