--- a/asiste/website/templates/register.html
+++ b/asiste/website/templates/register.html
@@ -1,33 +1,54 @@
-{% extends 'base.html' %}
+<!doctype html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Asiste | registro</title>
+    <link rel="shortcut icon" href="../../static/img/cuadrado.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../../static/css/register.css">
+
 {% block content %}
-
-
-<div class="col-md-6">
-<h1>Registro de usuarios administrativos</h1>
-<br/>
-
-<form method="POST" action="">
-	{% csrf_token %}
-	{% if form.errors %}
-			<div class="alert alert-warning alert-dismissible fade show" role="alert">
-			  Tu formulario esta mal diligenciado, tu registro no se puede realizar
-			  {% for field in form %}
-			  	{% if field.errors %}
-			  		{{ field.errors }}
-			  	{% endif %}
-			  {% endfor %}
-			  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+{% if form.errors %}
+	<div class="alert alert-danger alert-dismissible fade show" role="alert">
+  Tu formulario esta mal diligenciado, tu registro no se puede realizar
+  {% for field in form %}
+	{% if field.errors %}
+	{{ field.errors }}
+	{% endif %}
+  {% endfor %}
+			<button type="submit" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 			</div>
-		{% endif %}
-
+	{% endif %}
+<div class="contenedor">
+	<div class="card col col-md-5">
+	<div class="imagenes container-fluid">
+		<a href="{% url 'landing' %}"><img src="../../static/img/_logo_asiste_horizontal.png" class="img-1" alt="logo Asiste"></a>
+		<a href="https://oferta.senasofiaplus.edu.co/sofia-oferta/"><img src="../../static/img/_logo_sena_verde.png" class="img-2" alt="logo Sena"></a>
+	</div>
+	<h1>Registro de usuarios administrativos</h1>
+	<form method="POST" action="">
+	{% csrf_token %}
 	{{ form.as_p }}
-
-	<br/>
-	  <button type="submit" class="btn btn-secondary">Register</button>
+	<div class="boton">
+		<a href="{% url 'home' %}" class="btn btn-2">Regresar</a>
+		<button type="submit" class="btn btn-secondary">Register</button>
+	</div>
 	</form>
-
-
-
 </div>
-
+</div>
 {% endblock %}
+
+<footer>
+  <div class="copyright">
+    <a href="{% url 'landing' %}"><img src="../../static/img/_logo_asiste_fondo.png" alt="logo asiste para fondo solido"></a>
+    &copy; 2023 ASISTE. Todos los derechos reservados.
+  </div>
+</footer>
+</body>
+</html>
+
+
