Creacion de componentes basicos

--- a/asiste/website/templates/public/register.html
+++ b/asiste/website/templates/public/register.html
@@ -41,13 +41,7 @@
 </div>
 </div>
 {% endblock %}
-
-<footer>
-  <div class="copyright">
-    <a href="{% url 'landing' %}"><img src="../../static/img/_logo_asiste_fondo.png" alt="logo asiste para fondo solido"></a>
-    &copy; 2023 ASISTE. Todos los derechos reservados.
-  </div>
-</footer>
+{% include 'components/footer.html' %}
 </body>
 </html>
 
