--- a/asiste/website/templates/components/footer.html
+++ b/asiste/website/templates/components/footer.html
@@ -1,5 +1,7 @@
 <style>
   footer{
+  margin: 0;
+  padding: 0 !important;
   font-size: 1.2rem;
   display: flex;
   justify-content: center;
@@ -7,7 +9,7 @@
   color: white;
   text-align: center;
   height: 6rem;
-  width: 99vw;
+  width: 100%;
   background-color: #39A900;
   }
   .copyright{
