--- a/asiste/website/templates/index.html
+++ b/asiste/website/templates/index.html
@@ -1,16 +1,19 @@
-{% load static %}
-<!doctype html>
-<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Asiste | landing</title>
+    <title>Asiste | landing page </title>
+    <link rel="shortcut icon" href="../../static/img/circulo.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../../static/css/styles.css">
-    <link rel="shortcut icon" href="../../static/img/_icono_asiste.png" type="image/x-icon">
 </head>
 <body>
-    <h1>Landing page ASISTE</h1>
-    <a href="{% url 'home' %}">Iniciar sesion</a>
+    {% include 'components/navbar.html' %}
+    {% include 'public/landing.html' %}
+    {% include 'components/footer.html' %}
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
